--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <td><img src="Auli 1242-modified.png" width="300" height="300" alt="profile pic"></td>
         <td><h1> <center>Chittanshu Singh</center></h1>
             <p><em>Student at Poornima College Of Engineering||Learner||Learning <strong>python</strong> and <strong>web development</strong></em></p>
-            <p>Btech Ist year student at <strong><a href="https://www.poornima.org/">Poornima College</a></strong> learning Python and Web development from udemy.I have basic knowledge in c ,c++ and python.
+            <p>Btech Ist year student at <strong><a href="https://www.poornima.org/">Poornima College</a></strong> Branch Artificial intelligence and Data Science.I am a full stack developer with backend in python & javaScript and Frontend in HTML & CSS 
                 <br> Short term goal - Gsoc
                 <br> Long term goal - Want to become a profession coder and placed in a good company with nice package.
                 <br> When I am not doing work I play badminton.</p></td>
