added external css

--- a/contact_details.html
+++ b/contact_details.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Details</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <form action="mailto:itsderek456@gmail.com" method="post" enctype="text/plain">
