--- a/contact_details.html
+++ b/contact_details.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Details</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1>MY Details</h1>
+    <p>Name:-Chittanshu Singh <br>
+    Phone no:-9983544231 <br>
+    Email:-chittanshusingh456@gmail.com</p>
+    <h2>For further detail fill the following form and contact me.... <br></h2>
     <form action="mailto:itsderek456@gmail.com" method="post" enctype="text/plain">
         <label>Name:-</label>
         <input type="text" name="YourName"><br><br>
